@@ -1,3 +1,8 @@
+2014-11-18  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/63914
+	* gcc.dg/pr63914.c: New testcase.
+
 2014-11-18  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/55443
